--- a/README
+++ b/README
@@ -92,3 +92,6 @@ http://wiki.noreply.org/noreply/TheOnionRouter/TSocksPatches
 
 The Tor project:
 https://www.torproject.org
+
+Project Homepage:
+http://code.google.com/p/torsocks
